--- a/index.html
+++ b/index.html
@@ -5,8 +5,97 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Library</title>
+    <!-- css -->
+    <link href="assets/css/style.css" rel="stylesheet">    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- js -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- icon -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 </head>
 <body>
-    
+  <div class="row">
+    <div class="col-md-3 sideone"></div>
+    <div class="col-md-9 mainone">
+      <h1 class="head">Library</h1>
+      <div class="row">
+        <div class="col-md-4">
+          <div class="card">
+            <h5 class="card-header">Add Books</h5>
+            <div class="card-body">
+              <form action="">
+                <div class="input-group mb-3">
+                  <!-- <label for="title">Title: </label>&ensp; -->
+                  <span class="input-group-text"><i class="fas fa-book faicon"></i></span>
+                  <input type="text" class="form-control" id="title" placeholder="Title" name="title" required>
+                </div>
+                <div class="input-group mb-3">
+                  <span class="input-group-text"><i class="fas fa-user faicon"></i></span>
+                  <input type="text" class="form-control" id="author" placeholder="Author" name="author" required>
+                </div>
+                <div class="input-group mb-3">
+                  <span class="input-group-text"><i class="fas fa-book-reader faicon"></i></span>
+                  <input type="number" class="form-control" id="pages" placeholder="Pages" name="pages" required>
+                </div>
+                <div class="input-group mb-3">
+                  <span class="input-group-text"><i class="fas fa-book-reader faicon"></i></span>
+                  <input type="text" class="form-control" id="status" placeholder="Read/Not Read" name="status" required>
+                </div>
+                <div class="row">
+                  <!-- <div class="col-md-1"></div> -->
+                  <!-- <div class="col-md-5">
+                    <div class="form-check form-check-inline">
+                      <input class="form-check-input" type="radio" name="status" id="read" value="read">
+                      <label class="form-check-label para" for="read">Read</label>
+                    </div>
+                  </div>
+                  <div class="col-md-7">
+                    <div class="form-check form-check-inline">
+                      <input class="form-check-input" type="radio" name="status" id="notread" value="notread">
+                      <label class="form-check-label para" for="notread">Not Read?</label>
+                    </div>
+                  </div> -->
+                  <!-- <div class="col-md-1"></div> -->
+                </div>
+                <br>
+                <div class="row">
+                  <div class="col-md-4"></div>
+                  <div class="col-md-4 text-center  ">
+                    <button class="btn btn-primary btnone" type="submit"><i class="fas fa-plus faadd"></i></button>
+                  </div>
+                  <div class="col-md-4"></div>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-7">
+          <table class="table" id="myTable">
+            <thead>
+              <tr>
+                <th scope="col">Title</th>
+                <th scope="col">Auther</th>
+                <th scope="col">Pages</th>
+                <th scope="col">Status</th>
+                <th scope="col">Action</th>
+              </tr>
+            </thead>
+            <tbody id="table">
+              <!-- <tr>
+                <td>The India Story</td>
+                <td>Bimal Jalal</td>
+                <td>150</td>
+                <td>Read</td>
+                <td><button class="btn btn-primary btntwo delete" type="submit"><i class="fas fa-trash fadelete"></i></button></td>
+              </tr> -->
+            </tbody>
+          </table>
+        </div>
+        <div class="col-md-1"></div>
+      </div>
+    </div>
+  </div>
+  <script src="assets/js/main.js"></script>
 </body>
 </html>
